--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Site : pubhook.appdews.com",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
+  },
+  "engines": {
+    "node": ">= 12.0.0"
   },
   "repository": {
     "type": "git",
