--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
     "events": "^3.3.0",
     "express": "^4.17.3",
     "nanoid": "^3.3.1",
